--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
   </head>
   <body>
     <header>
-      <h1>VOLNY 2</h1>
+      <h1 class="nombre">VOLNY</h1>
     </header>
 
     <header class="volny">
-      <p>
+      <p class="nombre">
         VOLNY, Una marca versátil que ofrece la elaboración de prendas
         personalizadas, así como servicios de bordados e impresiones grafica en
         telas y tazas
