--- a/indumentaria.html
+++ b/indumentaria.html
@@ -8,18 +8,9 @@
   </head>
   <body>
     
-    <header>
-      <h1 class="nombre">VOLNY</h1>
-    </header>
+ 
 
 
-    <header class="volny">
-      <p class="nombre">
-        VOLNY, Una marca versátil que ofrece la elaboración de prendas
-        personalizadas, así como servicios de bordados e impresiones grafica en
-        telas y tazas
-      </p>
-    </header>
 
     <button id="sidebarToggleBtn" class="categorias">CATEGORIAS</button>
 
@@ -27,7 +18,7 @@
 
 
 
-    <h2 class="sacos">BUZOS OVERSIZE</h2>
+
         <div class="productSection" id="sacoProducts">
       </div>
       <br /><br /><br />
@@ -35,7 +26,6 @@
 
 
 
-      <h2 class="camisas">CAMISAS</h2>
       <div class="categorySection">
         <div class="productSection" id="camisaProducts">
       </div>
@@ -44,20 +34,22 @@
       <br /><br /><br />
 
       <div class="categorySection">
-        <h2 class="mugs">MUGS PERSONALIZADOS</h2>
         <div class="productSection" id="mugsProducts">
           <!-- Aquí se mostrarán los mugs personalizados -->
         </div>
       </div>
       <br /><br /><br />
 
+
+
       <div class="categorySection">
-        <h2 class="toallas">TOALLAS</h2>
         <div class="productSection" id="toallasProducts">
           <!-- Aquí se mostrarán las toallas -->
         </div>
       </div>
-      <br /><br /><br />
+
+
+
 
       <div class="categorySection">
         <h2 class="indumentaria">Indumentaria Empresarial</h2>
@@ -67,13 +59,7 @@
       </div>
       <br /><br /><br />
 
-      <div class="categorySection">
-        <h2 class="chaleco">CHALECOS EMPRESARIALES</h2>
-        <div class="productSection" id="chalecoProducts">
-          <!-- Aquí se mostrarán los chalecos empresariales -->
-        </div>
-      </div>
-    </div>
+
 
     <!-- Sección de la barra lateral -->
     <div class="sidebar" id="sidebar">
@@ -122,7 +108,7 @@
         <li><br><br>
           <a
             class="seccion"
-            href="chalecoempresarial.html"
+            href="indumentaria.html"
             onclick="toggleCategory('chalecoProducts')"
           >
             CHALECOS EMPRESARIAL
@@ -134,6 +120,10 @@
       <!-- Aquí se mostrarán los detalles de las categorías -->
     </div>
     <script src="app.js"></script>
-    <scrip src="app2.js"></scrip>
+    <scrip src="ocultar.js"></scrip>
+    <script src="ocultarmugs.js"></script>
+    <script src="ocultartoall.js"></script>
+    <script src="ocultarmugs.js"></script>
+    <script src="ocultartoalle.js"></script>
   </body>
 </html>
