--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     
     <!-- Iconos de whaapp -->    
     <div class="whatsapp-icon">
-      <a href="https://wa.me/+3108337837" target="_blank" title="Contáctame por WhatsApp">
+      <a href="https://wa.me/+" target="_blank" title="Contáctame por WhatsApp">
         <i class="fab fa-whatsapp"></i>
       </a>
     </div>
