--- a/index.html
+++ b/index.html
@@ -15,11 +15,6 @@
     </header>
 
 
-    <header class="volny">
-      <div class="moving-info">
-      </div>
-          </header>
-
 
     <button id="sidebarToggleBtn" class="categorias">CATEGORIAS</button>
 
@@ -36,22 +31,11 @@
 
     <!-- Barra de informacion -->
     <div class="moving-info">
-   
+      Volny una marca versatil que ofrece la elaboración de prendas perzonalizadas, asi como sus servicios de bordados e impresiones graficas en telas y tazas
     </div>
     <!-- Asegúrate de incluir este script en la sección <body> o al final del archivo HTML -->
+
 <script>
-  // Array con los mensajes que quieres mostrar
-  const messages = [
-    "Garantizados",
-    "Innovación ",
-    "Calidad",
-    "Volny una marca versatil que ofrece la elaboración de prendas perzonalizadas, asi como sus servicios de bordados e impresiones graficas en telas y tazas"
-    // Puedes agregar más mensajes aquí
-  ];
-
-  // Obtener referencia al elemento del mensaje
-  const infoMessage = document.getElementById("info-message");
-
   // Función para cambiar el mensaje en la sección
   function changeMessage() {
     let randomIndex = Math.floor(Math.random() * messages.length);
@@ -193,9 +177,15 @@
       <li><a href="#">Política de Cambios y Garantías</a></li><br>
       <li><a href="#">Política de reembolso</a></li><br>
       <li><a href="#">Acerca de nosotros</a></li><br>
+      <li><a href="#">Encuéntranos en: Armenia Quindio</a></li><br>
+      <li><a href="#">Acerca de nosotros</a></li><br>
+      <li><a href="#">Tel:3108337837
+      </a></li><br>
+
+
     </ul>
 
-    <h2>Conócenos:</h2>
+    <h2 class="info-section">Conócenos:</h2>
     <p>Encuéntranos en: Armenia Quindio ###</p>
     <p>Tel:###############
 </p>
