--- a/chalecoempresarial.html
+++ b/chalecoempresarial.html
@@ -137,4 +137,26 @@
     <script src="ocultartoalle.js"></script>
     <script src="ocultarindumea.js"></script>
   </body>
+  <div class="info-section">
+    <h2>Información</h2>
+    <ul>
+      <li><a href="#">Política de Privacidad</a></li><br>
+      <li><a href="#">Términos y Condiciones</a></li><br>
+      <li><a href="#">Política de Cambios y Garantías</a></li><br>
+      <li><a href="#">Política de reembolso</a></li><br>
+      <li><a href="#">Acerca de nosotros</a></li><br>
+      <li><a href="#">Encuéntranos en: Armenia Quindio</a></li><br>
+      <li><a href="#">Acerca de nosotros</a></li><br>
+      <li><a href="#">Tel:3108337837
+      </a></li><br>
+
+
+    </ul>
+
+    <h2 class="info-section">Conócenos:</h2>
+    <p>Encuéntranos en: Armenia Quindio ###</p>
+    <p>Tel:###############
+</p>
+  </div>
+
 </html>
