--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <!-- Barra de informacion -->
     <div class="moving-info">
-      Volny una marca versatil que ofrece la elaboración de prendas perzonalizadas, asi como sus servicios de bordados e impresiones graficas en telas y tazas
+      Una marca versatil que ofrece la elaboración de prendas perzonalizadas, asi como sus servicios de bordados e impresiones graficas en telas y tazas
     </div>
     <!-- Asegúrate de incluir este script en la sección <body> o al final del archivo HTML -->
 
@@ -44,7 +44,7 @@
 
   // Cambiar el mensaje cada 3 segundos (3000 milisegundos)
   setInterval(changeMessage, 6000);
-</script><br><br><br>
+</script><br>
 
 
 
