--- a/chalecoempresarial.html
+++ b/chalecoempresarial.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tienda de Ropa</title>
+    <title>Chalecos Empresariales</title>
     <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
+
   </head>
   <body>
     
@@ -14,8 +16,20 @@
 
     <button id="sidebarToggleBtn" class="categorias">CATEGORIAS</button>
 
-    <!-- Contenedor de varias secciones: camisas, toallas, etc. -->
+    
+    <div class="button-container"> <!-- Mueve la clase button-container aquí -->
+      <a href="index.html" id="retroceder" class="button">Retroceder</a>
+    </div>
+  </div>
 
+
+
+    <!-- Contenedor de varias secciones: camisas, toallas, etc. -->
+    <div class="whatsapp-icon">
+      <a href="https://wa.me/+3108337837" target="_blank" title="Contáctame por WhatsApp">
+        <i class="fab fa-whatsapp"></i>
+      </a>
+    </div>
 
 
 
@@ -118,7 +132,7 @@
         <li><br><br>
           <a
             class="seccion"
-            href="indumentaria.html"
+            href="chalecoempresarial.html"
             onclick="toggleCategory('chalecoProducts')"
           >
             CHALECOS EMPRESARIAL
