--- a/mugs.html
+++ b/mugs.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tienda de Ropa</title>
+    <title>Mugs perzonalizados</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
@@ -15,6 +15,12 @@
     <button id="sidebarToggleBtn" class="categorias">CATEGORIAS</button>
 
     <!-- Contenedor de varias secciones: camisas, toallas, etc. -->
+
+
+    <div class="button-container"> <!-- Mueve la clase button-container aquí -->
+      <a href="index.html" id="retroceder" class="button">Retroceder</a>
+    </div>
+  </div>
 
 
 
