--- a/buzos.html
+++ b/buzos.html
@@ -14,7 +14,7 @@
     <button id="sidebarToggleBtn" class="categorias">CATEGORIAS</button><br><br><br>
     
     <div class="button-container"> <!-- Mueve la clase button-container aquí -->
-      <a href="index.html" id="retroceder" class="button">Retroceder</a>
+      <a href="index.html" id="retroceder" class="button">INICIO</a>
     </div>
   </div>
 
