--- a/mugs.html
+++ b/mugs.html
@@ -18,7 +18,7 @@
 
 
     <div class="button-container"> <!-- Mueve la clase button-container aquí -->
-      <a href="index.html" id="retroceder" class="button">Retroceder</a>
+      <a href="index.html" id="retroceder" class="button">INICIO</a>
     </div>
   </div>
 
