--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             <li>
               <a
                 class="seccion"
-                href="ca.html"
+                href="camisas.html"
                 onclick="toggleCategory('camisaProducts')"
               >
                 CAMISAS
