--- a/Pagina-VOLNY-main/Pagina-VOLNY-main/index.html
+++ b/Pagina-VOLNY-main/Pagina-VOLNY-main/index.html
@@ -31,7 +31,7 @@
 
     <!-- Barra de informacion -->
     <div class="moving-info">
-      Una marca versatil que ofrece la elaboración de prendas perzonalizadas, asi como sus servicios de bordados e impresiones graficas en telas y tazas
+     Marca versatil que ofrece la elaboración de prendas perzonalizadas, asi como sus servicios de bordados e impresiones graficas en telas y tazas
     </div>
     <!-- Asegúrate de incluir este script en la sección <body> o al final del archivo HTML -->
 
