--- a/Pagina-VOLNY-main/Pagina-VOLNY-main/index.html
+++ b/Pagina-VOLNY-main/Pagina-VOLNY-main/index.html
@@ -60,7 +60,7 @@
 
 
     <!-- Contenedor de varias secciones: camisas, toallas, etc. -->
-    <h2 class="sacos">BUZOS OVERSIZE</h2>
+    <h2 class="sacos">BUZOS bbb</h2>
         <div class="productSection" id="sacoProducts">
       </div>
       <br /><br /><br />
@@ -68,7 +68,7 @@
 
 
 
-      <h2 class="camisas">CAMISAS</h2>
+      <h2 class="camisas">CAMISAS 2</h2>
       <div class="categorySection">
         <div class="productSection" id="camisaProducts">
       </div>
@@ -77,7 +77,7 @@
       <br /><br /><br />
 
       <div class="categorySection">
-        <h2 class="mugs">MUGS PERSONALIZADOS</h2>
+        <h2 class="mugs">MUGS PERSONALIZADOS 3 </h2>
         <div class="productSection" id="mugsProducts">
           <!-- Aquí se mostrarán los mugs personalizados -->
         </div>
