--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tienda de Ropa</title>
+    <title>Tienda de Ropa ff</title>
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
 
@@ -16,7 +16,7 @@
 
 
 
-    <button id="sidebarToggleBtn" class="categorias">CATEGORIAS</button>
+    <button id="sidebarToggleBtn" class="categorias">CATEGORIAS 2</button>
 
     
     <!-- Iconos de whaapp -->    
@@ -31,7 +31,7 @@
 
     <!-- Barra de informacion -->
     <div class="moving-info">
-      Una marca versatil que ofrece la elaboración de prendas perzonalizadas, asi como sus servicios de bordados e impresiones graficas en telas y tazas
+     Marca versatil que ofrece la elaboración de prendas perzonalizadas, asi como sus servicios de bordados e impresiones graficas en telas y tazas
     </div>
     <!-- Asegúrate de incluir este script en la sección <body> o al final del archivo HTML -->
 
