--- a/Pagina-VOLNY-main/Pagina-VOLNY-main/index.html
+++ b/Pagina-VOLNY-main/Pagina-VOLNY-main/index.html
@@ -12,7 +12,7 @@
     
     <header>
     
-      <h1 class="nombre">VOLNY lo pe</h1>
+      <h1 class="nombre">VOLNY</h1>
     </header>
 
     <button id="sidebarToggleBtn" class="categorias">CATEGORIAS</button>
@@ -27,7 +27,7 @@
 
     <!-- Barra de informacion -->
     <div class="moving-info">
-     Marca versatil que ofrece la elaboración de prendas perzonalizadas, asi como sus servicios de bordados e impresiones graficas en telas y tazas
+      Esto es un mensaje, prueba Marca versatil que ofrece la elaboración de prendas perzonalizadas, asi como sus servicios de bordados e impresiones graficas en telas y tazas
     </div>
     <!-- Asegúrate de incluir este script en la sección <body> o al final del archivo HTML -->
 
