--- a/Pagina-VOLNY-main/Pagina-VOLNY-main/index.html
+++ b/Pagina-VOLNY-main/Pagina-VOLNY-main/index.html
@@ -32,13 +32,6 @@
     <!-- Asegúrate de incluir este script en la sección <body> o al final del archivo HTML -->
 
 
-  
-
-
-
-
-
-
 <script>
   // Función para cambiar el mensaje en la sección
   function changeMessage() {
@@ -60,7 +53,7 @@
 
 
     <!-- Contenedor de varias secciones: camisas, toallas, etc. -->
-    <h2 class="sacos">BUZOS bbb</h2>
+    <h2 class="sacos">BUZOS 333</h2>
         <div class="productSection" id="sacoProducts">
       </div>
       <br /><br /><br />
