--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </header>
 
 <p>Cambios enviando jejeje</p>
-
+<p>Cambios desde el local</p>
 
     <button id="sidebarToggleBtn" class="categorias">CATEGORIAS 2</button>
 
